# socialchoicelab

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  lint.sh
.cursor/: HANDOFF.md
.cursor/hooks/: model-advisor.sh  session-init.sh
.cursor/rules/: Approval-Before-Implementing.mdc  Check-State-And-Tailor.mdc  Cpp-Core-And-C-API-Workflow.mdc  End-User-Error-Messages.mdc  File-Naming-Conventions.mdc  New-Functionality-means-New-Tests.mdc  No-Backward-Compat-Until-Open.mdc  R-Python-Layer-Parity.mdc  Review-Rules-At-Start.mdc  Run-All-Local-Checks-Before-Push.mdc  Verify-Library-Behaviour-From-Docs.mdc
.github/workflows/: ci.yml
agent_communication/: 03_09_Agents_the_last_problem.md
docs/: README.md  mkdocs.yml
docs/architecture/: Design_Document.md  StreamManager_Design.md  aggregation_design.md  c_api_design.md  canvas_overlay_schema.md  competition_canvas_widget.md  competition_design.md  geometry_design.md  indifference_design.md  rendering_consolidation_evaluation.md  stream_manager_design.md
docs/development/: DEVELOPMENT.md  Git_Reference.md  sample_simulation_description.md  setup_checklist.md  visualization_design.md
docs/references/: README.md  REFERENCE_INDEX.md  implementation_priority.md
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/status/: CONSENSUS_PLAN.md  CONSENSUS_PLAN_3.md  MILESTONE_GATES.md  PROJECT_LOG.md  Phase2Changes.md  ROADMAP.md  WHERE_WE_ARE.md  binding_decisions.md  binding_plan.md  c_api_extensions_plan.md  competition_plan.md  competition_roadmap.md  consensus_plan_4.md  follow_up_queue.md  geometry_plan.md  profiles_and_aggregation_plan.md  visualization_plan.md
include/: scs_api.h
python/: MANIFEST.in  README.md  TestScript_11_Tovey.py  benchmark_ic.py  canvas_load_demo.py  canvas_save_demo.py  competition_1d_demo.py  competition_2D_demo_2Cand.py  competition_2D_demo_3Cand.py  competition_demo.py  compound_api_demo.py  compound_api_interactive_common.py  compound_api_interactive_demo.py  compound_api_interactive_shell.html  devScript_MAIN.py  pyproject.toml  static_scenarios_demo.py
python/notebooks/: spatial_voting.ipynb
python/src/socialchoicelab/: __init__.py  _competition.py  _error.py  _functions.py  _geometry.py  _loader.py  _profile.py  _social.py  _stream_manager.py  _types.py  _voting_rules.py  _winset.py  competition_canvas.js  palette.py  plots.py  scenarios.py  scs_canvas_core.js  spatial_voting_canvas.js
python/src/socialchoicelab/data/scenarios/: diamond_and_one_very_extreme.json  dpmr_puch2014_seven.json  fiorina_plott_a_p_s_r1978_series3.json  fiorina_plott_a_p_s_r1978_series3_not_plott_cond.json  for_uninimity_three.json  four_unit_square_corners.json  laing_olmsted_skewed_star.json  poly_eleven.json  poly_nine.json  poly_thirteen.json  square_five.json  symmetrical_eleven.json  symmetrical_seven.json  tie_two_alts_four_voters.json  tovey_regular_polygon.json  triangle_three.json
python/tests/: test_b5.py  test_b8.py  test_competition.py  test_competition_canvas_1d.py  test_competition_canvas_ic.py  test_competition_canvas_save_load.py  test_competition_canvas_voronoi.py  test_competition_canvas_winset.py  test_compound_api_interactive.py  test_import.py  test_palette.py  test_plots.py  test_scenarios.py  test_voter_sampler.py
r/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  TestScript_11_Tovey.R  _pkgdown.yml  canvas_load_demo.R  canvas_save_demo.R  competition_1d_demo.R  competition_2D_demo_2Cand.R  competition_2D_demo_3Cand.R  competition_demo.R  compound_api_demo.R  compound_api_interactive_demo.R  devScript_MAIN.R  static_scenarios_demo.R
r/R/: competition.R  competition_canvas.R  functions.R  geometry.R  palette.R  plots.R  profile.R  scenarios.R  social.R  spatial_voting_canvas.R  stream_manager.R  utils.R  voter_sampler.R  voting_rules.R  winset.R
r/doc/: spatial_voting.Rmd
r/docs/: 404.html  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  sitemap.xml
r/man/: CompetitionExperiment.Rd  CompetitionTrace.Rd  Profile.Rd  StreamManager.Rd  Winset.Rd  animate_competition_canvas.Rd  animate_competition_trajectories.Rd  antiplurality_all_winners.Rd  antiplurality_one_winner.Rd  antiplurality_scores.Rd  approval_all_winners_spatial.Rd  approval_all_winners_topk.Rd  approval_scores_spatial.Rd  approval_scores_topk.Rd  borda_all_winners.Rd  borda_one_winner.Rd  borda_ranking.Rd  borda_scores.Rd  calculate_distance.Rd  centroid_2d.Rd  competition_run.Rd  competition_run_experiment.Rd  condorcet_winner_2d.Rd  condorcet_winner_profile.Rd  convex_hull_2d.Rd  copeland_scores_2d.Rd  copeland_winner_2d.Rd  core_2d.Rd  distance_to_utility.Rd  dot-PALETTE_HEX.Rd  draw_voters.Rd  finalize_plot.Rd  geometric_mean_2d.Rd  has_condorcet_winner_2d.Rd  has_condorcet_winner_profile.Rd  ic_interval_1d.Rd  ic_polygon_2d.Rd  is_condorcet_consistent.Rd  is_majority_consistent.Rd  is_pareto_efficient.Rd  (+53 more)
r/src/: Makevars  Makevars.win  competition.c  functions.c  geometry.c  init.c  profile.c  scs_r_helpers.h  social.c  stream_manager.c  voronoi.c  voting_rules.c  winset.c  winset_1d.c
r/tests/: testthat.R
r/vignettes/: spatial_voting.Rmd
scripts/: check-all.sh  check-bindings.sh  check-setup.sh  end-of-milestone.sh  end-of-session.sh  pre-commit.sh  pre-push.sh  setup-build.sh  update-where-we-are.sh
src/c_api/: scs_api.cpp
tests/unit/: test_aggregation_integration.cpp  test_aggregation_properties.cpp  test_c_api.cpp  test_centrality.cpp  test_competition_election_feedback.cpp  test_competition_engine.cpp  test_competition_experiment_runner.cpp  test_competition_motion.cpp  test_competition_strategies.cpp  test_competition_termination.cpp  test_competitor_initialization.cpp  test_convex_hull.cpp  test_copeland.cpp  test_core.cpp  test_core_types.cpp  test_distance_comparison.cpp  test_distance_functions.cpp  test_distance_speed.cpp  test_geom2d.cpp  test_geometry_integration.cpp  test_heart.cpp  test_level_set.cpp  test_loss_functions.cpp  test_majority.cpp  test_performance_comparison.cpp  (+11 more)
(+319 files in other folders)
